welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program: error: not found: value move
		move(getY(),getDirection() == Direction.NORTH); 
                ^Program:6: error: not found: value versLAvent
  versLAvent=true
  ^Program:8: error: not found: value versLAvent
  }else{versLAvent=false
        ^Program:15: error: not found: value move
move(nbPas: Int,versLAvant: Boolean){
^Program:15: error: not found: value nbPas
move(nbPas: Int,versLAvant: Boolean){
     ^Program:16: error: not found: value versLAvent
	if (versLAvent==true){
            ^