welcome.lessons.welcome.methods.args.MethodsArgs.scala.code


var versLAvant:Boolean=false
if (getDirection==Direction.NORTH){
  versLAvent=true
    
  }else{versLAvent=false
  
}




move(nbPas: Int,versLAvant: Boolean){
	if (versLAvent==true){
    while(!estFaceMur){
      avance()
    }
  }else{
    while(!estFaceMur){
      recule()
    
  }
}
}